// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`homeyApp > should pin the main rule inventory 1`] = `
[
  "@eslint-community/eslint-comments/no-restricted-disable",
  "@eslint-community/eslint-comments/no-unlimited-disable",
  "@eslint-community/eslint-comments/no-unused-enable",
  "@eslint-community/eslint-comments/require-description",
  "@stylistic/multiline-comment-style",
  "@stylistic/quotes",
  "@stylistic/spaced-comment",
  "@typescript-eslint/class-methods-use-this",
  "@typescript-eslint/consistent-type-assertions",
  "@typescript-eslint/consistent-type-exports",
  "@typescript-eslint/consistent-type-imports",
  "@typescript-eslint/default-param-last",
  "@typescript-eslint/explicit-function-return-type",
  "@typescript-eslint/explicit-member-accessibility",
  "@typescript-eslint/max-params",
  "@typescript-eslint/method-signature-style",
  "@typescript-eslint/naming-convention",
  "@typescript-eslint/no-base-to-string",
  "@typescript-eslint/no-floating-promises",
  "@typescript-eslint/no-import-type-side-effects",
  "@typescript-eslint/no-magic-numbers",
  "@typescript-eslint/no-misused-promises",
  "@typescript-eslint/no-restricted-types",
  "@typescript-eslint/no-shadow",
  "@typescript-eslint/no-unnecessary-condition",
  "@typescript-eslint/no-unnecessary-qualifier",
  "@typescript-eslint/no-unnecessary-type-assertion",
  "@typescript-eslint/no-unsafe-type-assertion",
  "@typescript-eslint/no-unused-private-class-members",
  "@typescript-eslint/no-unused-vars",
  "@typescript-eslint/no-useless-empty-export",
  "@typescript-eslint/only-throw-error",
  "@typescript-eslint/prefer-destructuring",
  "@typescript-eslint/prefer-enum-initializers",
  "@typescript-eslint/prefer-readonly",
  "@typescript-eslint/promise-function-async",
  "@typescript-eslint/require-array-sort-compare",
  "@typescript-eslint/restrict-template-expressions",
  "@typescript-eslint/return-await",
  "@typescript-eslint/strict-boolean-expressions",
  "@typescript-eslint/strict-void-return",
  "@typescript-eslint/switch-exhaustiveness-check",
  "@typescript-eslint/triple-slash-reference",
  "accessor-pairs",
  "array-callback-return",
  "arrow-body-style",
  "capitalized-comments",
  "complexity",
  "curly",
  "default-case-last",
  "eqeqeq",
  "func-name-matching",
  "func-names",
  "func-style",
  "grouped-accessor-pairs",
  "guard-for-in",
  "id-length",
  "import-x/extensions",
  "import-x/first",
  "import-x/newline-after-import",
  "import-x/no-absolute-path",
  "import-x/no-anonymous-default-export",
  "import-x/no-commonjs",
  "import-x/no-cycle",
  "import-x/no-default-export",
  "import-x/no-duplicates",
  "import-x/no-dynamic-require",
  "import-x/no-empty-named-blocks",
  "import-x/no-extraneous-dependencies",
  "import-x/no-import-module-exports",
  "import-x/no-mutable-exports",
  "import-x/no-named-as-default",
  "import-x/no-named-as-default-member",
  "import-x/no-named-default",
  "import-x/no-relative-packages",
  "import-x/no-self-import",
  "import-x/no-unassigned-import",
  "import-x/no-unresolved",
  "import-x/no-unused-modules",
  "import-x/no-useless-path-segments",
  "import-x/no-webpack-loader-syntax",
  "import-x/unambiguous",
  "max-classes-per-file",
  "max-depth",
  "max-lines-per-function",
  "max-nested-callbacks",
  "max-statements",
  "no-alert",
  "no-await-in-loop",
  "no-bitwise",
  "no-caller",
  "no-cond-assign",
  "no-console",
  "no-constant-binary-expression",
  "no-constructor-return",
  "no-else-return",
  "no-eval",
  "no-extend-native",
  "no-extra-bind",
  "no-extra-boolean-cast",
  "no-fallthrough",
  "no-implicit-coercion",
  "no-inline-comments",
  "no-irregular-whitespace",
  "no-iterator",
  "no-labels",
  "no-lone-blocks",
  "no-lonely-if",
  "no-loop-func",
  "no-multi-assign",
  "no-multi-str",
  "no-nested-ternary",
  "no-new",
  "no-new-func",
  "no-object-constructor",
  "no-param-reassign",
  "no-promise-executor-return",
  "no-proto",
  "no-restricted-exports",
  "no-restricted-globals",
  "no-return-assign",
  "no-script-url",
  "no-self-compare",
  "no-sequences",
  "no-template-curly-in-string",
  "no-unmodified-loop-condition",
  "no-unneeded-ternary",
  "no-unreachable-loop",
  "no-unused-private-class-members",
  "no-useless-call",
  "no-useless-computed-key",
  "no-useless-concat",
  "no-useless-rename",
  "no-useless-return",
  "no-void",
  "object-shorthand",
  "one-var",
  "operator-assignment",
  "perfectionist/sort-array-includes",
  "perfectionist/sort-classes",
  "perfectionist/sort-enums",
  "perfectionist/sort-export-attributes",
  "perfectionist/sort-exports",
  "perfectionist/sort-heritage-clauses",
  "perfectionist/sort-import-attributes",
  "perfectionist/sort-imports",
  "perfectionist/sort-interfaces",
  "perfectionist/sort-intersection-types",
  "perfectionist/sort-maps",
  "perfectionist/sort-modules",
  "perfectionist/sort-named-exports",
  "perfectionist/sort-named-imports",
  "perfectionist/sort-object-types",
  "perfectionist/sort-objects",
  "perfectionist/sort-sets",
  "perfectionist/sort-switch-case",
  "perfectionist/sort-union-types",
  "prefer-arrow-callback",
  "prefer-exponentiation-operator",
  "prefer-named-capture-group",
  "prefer-numeric-literals",
  "prefer-object-has-own",
  "prefer-object-spread",
  "prefer-regex-literals",
  "prefer-template",
  "preserve-caught-error",
  "radix",
  "regexp/confusing-quantifier",
  "regexp/no-empty-alternative",
  "regexp/no-lazy-ends",
  "regexp/no-potentially-useless-backreference",
  "regexp/no-super-linear-move",
  "regexp/no-useless-escape",
  "regexp/no-useless-flag",
  "regexp/optimal-lookaround-quantifier",
  "regexp/prefer-named-backreference",
  "regexp/prefer-named-replacement",
  "regexp/prefer-result-array-groups",
  "require-atomic-updates",
  "require-unicode-regexp",
  "symbol-description",
  "unicode-bom",
  "unicorn/consistent-boolean-name",
  "unicorn/consistent-class-member-order",
  "unicorn/consistent-destructuring",
  "unicorn/consistent-function-style",
  "unicorn/custom-error-definition",
  "unicorn/expiring-todo-comments",
  "unicorn/iteration-fallback-style",
  "unicorn/name-replacements",
  "unicorn/no-anonymous-default-export",
  "unicorn/no-array-front-mutation",
  "unicorn/no-break-in-nested-loop",
  "unicorn/no-immediate-mutation",
  "unicorn/no-named-default",
  "unicorn/no-null",
  "unicorn/no-this-assignment",
  "unicorn/no-unnecessary-boolean-comparison",
  "unicorn/no-unreadable-new-expression",
  "unicorn/no-unsafe-dom-html",
  "unicorn/no-unused-properties",
  "unicorn/prefer-combined-guards",
  "unicorn/prefer-dispose",
  "unicorn/prefer-global-number-constants",
  "unicorn/prefer-import-meta-properties",
  "unicorn/prefer-minimal-ternary",
  "unicorn/prefer-number-properties",
  "unicorn/prefer-short-arrow-method",
  "unicorn/prefer-string-starts-ends-with",
  "unicorn/prefer-temporal",
  "unicorn/require-post-message-target-origin",
  "unicorn/try-complexity",
  "use-isnan",
  "valid-typeof",
  "yoda",
]
`;

exports[`library > should pin the main rule inventory 1`] = `
[
  "@eslint-community/eslint-comments/no-restricted-disable",
  "@eslint-community/eslint-comments/no-unlimited-disable",
  "@eslint-community/eslint-comments/no-unused-enable",
  "@eslint-community/eslint-comments/require-description",
  "@stylistic/multiline-comment-style",
  "@stylistic/quotes",
  "@stylistic/spaced-comment",
  "@typescript-eslint/class-methods-use-this",
  "@typescript-eslint/consistent-type-assertions",
  "@typescript-eslint/consistent-type-exports",
  "@typescript-eslint/consistent-type-imports",
  "@typescript-eslint/default-param-last",
  "@typescript-eslint/explicit-function-return-type",
  "@typescript-eslint/explicit-member-accessibility",
  "@typescript-eslint/max-params",
  "@typescript-eslint/method-signature-style",
  "@typescript-eslint/naming-convention",
  "@typescript-eslint/no-base-to-string",
  "@typescript-eslint/no-floating-promises",
  "@typescript-eslint/no-import-type-side-effects",
  "@typescript-eslint/no-magic-numbers",
  "@typescript-eslint/no-misused-promises",
  "@typescript-eslint/no-restricted-types",
  "@typescript-eslint/no-shadow",
  "@typescript-eslint/no-unnecessary-condition",
  "@typescript-eslint/no-unnecessary-qualifier",
  "@typescript-eslint/no-unnecessary-type-assertion",
  "@typescript-eslint/no-unsafe-type-assertion",
  "@typescript-eslint/no-unused-private-class-members",
  "@typescript-eslint/no-unused-vars",
  "@typescript-eslint/no-useless-empty-export",
  "@typescript-eslint/only-throw-error",
  "@typescript-eslint/prefer-destructuring",
  "@typescript-eslint/prefer-enum-initializers",
  "@typescript-eslint/prefer-readonly",
  "@typescript-eslint/promise-function-async",
  "@typescript-eslint/require-array-sort-compare",
  "@typescript-eslint/restrict-template-expressions",
  "@typescript-eslint/return-await",
  "@typescript-eslint/strict-boolean-expressions",
  "@typescript-eslint/strict-void-return",
  "@typescript-eslint/switch-exhaustiveness-check",
  "@typescript-eslint/triple-slash-reference",
  "accessor-pairs",
  "array-callback-return",
  "arrow-body-style",
  "capitalized-comments",
  "complexity",
  "curly",
  "default-case-last",
  "eqeqeq",
  "func-name-matching",
  "func-names",
  "func-style",
  "grouped-accessor-pairs",
  "guard-for-in",
  "id-length",
  "import-x/first",
  "import-x/newline-after-import",
  "import-x/no-absolute-path",
  "import-x/no-anonymous-default-export",
  "import-x/no-commonjs",
  "import-x/no-cycle",
  "import-x/no-default-export",
  "import-x/no-duplicates",
  "import-x/no-dynamic-require",
  "import-x/no-empty-named-blocks",
  "import-x/no-extraneous-dependencies",
  "import-x/no-import-module-exports",
  "import-x/no-mutable-exports",
  "import-x/no-named-as-default",
  "import-x/no-named-as-default-member",
  "import-x/no-named-default",
  "import-x/no-namespace",
  "import-x/no-relative-packages",
  "import-x/no-self-import",
  "import-x/no-unassigned-import",
  "import-x/no-unresolved",
  "import-x/no-unused-modules",
  "import-x/no-useless-path-segments",
  "import-x/no-webpack-loader-syntax",
  "import-x/unambiguous",
  "max-classes-per-file",
  "max-depth",
  "max-lines-per-function",
  "max-nested-callbacks",
  "max-statements",
  "no-alert",
  "no-await-in-loop",
  "no-bitwise",
  "no-caller",
  "no-cond-assign",
  "no-console",
  "no-constant-binary-expression",
  "no-constructor-return",
  "no-else-return",
  "no-eval",
  "no-extend-native",
  "no-extra-bind",
  "no-extra-boolean-cast",
  "no-fallthrough",
  "no-implicit-coercion",
  "no-inline-comments",
  "no-irregular-whitespace",
  "no-iterator",
  "no-labels",
  "no-lone-blocks",
  "no-lonely-if",
  "no-loop-func",
  "no-multi-assign",
  "no-multi-str",
  "no-nested-ternary",
  "no-new",
  "no-new-func",
  "no-object-constructor",
  "no-param-reassign",
  "no-promise-executor-return",
  "no-proto",
  "no-restricted-exports",
  "no-restricted-globals",
  "no-restricted-imports",
  "no-return-assign",
  "no-script-url",
  "no-self-compare",
  "no-sequences",
  "no-template-curly-in-string",
  "no-unmodified-loop-condition",
  "no-unneeded-ternary",
  "no-unreachable-loop",
  "no-unused-private-class-members",
  "no-useless-call",
  "no-useless-computed-key",
  "no-useless-concat",
  "no-useless-rename",
  "no-useless-return",
  "no-void",
  "object-shorthand",
  "one-var",
  "operator-assignment",
  "perfectionist/sort-array-includes",
  "perfectionist/sort-classes",
  "perfectionist/sort-enums",
  "perfectionist/sort-export-attributes",
  "perfectionist/sort-exports",
  "perfectionist/sort-heritage-clauses",
  "perfectionist/sort-import-attributes",
  "perfectionist/sort-imports",
  "perfectionist/sort-interfaces",
  "perfectionist/sort-intersection-types",
  "perfectionist/sort-maps",
  "perfectionist/sort-modules",
  "perfectionist/sort-named-exports",
  "perfectionist/sort-named-imports",
  "perfectionist/sort-object-types",
  "perfectionist/sort-objects",
  "perfectionist/sort-sets",
  "perfectionist/sort-switch-case",
  "perfectionist/sort-union-types",
  "prefer-arrow-callback",
  "prefer-exponentiation-operator",
  "prefer-named-capture-group",
  "prefer-numeric-literals",
  "prefer-object-has-own",
  "prefer-object-spread",
  "prefer-regex-literals",
  "prefer-template",
  "preserve-caught-error",
  "radix",
  "regexp/confusing-quantifier",
  "regexp/no-empty-alternative",
  "regexp/no-lazy-ends",
  "regexp/no-potentially-useless-backreference",
  "regexp/no-super-linear-move",
  "regexp/no-useless-escape",
  "regexp/no-useless-flag",
  "regexp/optimal-lookaround-quantifier",
  "regexp/prefer-named-backreference",
  "regexp/prefer-named-replacement",
  "regexp/prefer-result-array-groups",
  "require-atomic-updates",
  "require-unicode-regexp",
  "symbol-description",
  "unicode-bom",
  "unicorn/consistent-boolean-name",
  "unicorn/consistent-class-member-order",
  "unicorn/consistent-destructuring",
  "unicorn/consistent-function-style",
  "unicorn/custom-error-definition",
  "unicorn/expiring-todo-comments",
  "unicorn/iteration-fallback-style",
  "unicorn/name-replacements",
  "unicorn/no-anonymous-default-export",
  "unicorn/no-array-front-mutation",
  "unicorn/no-break-in-nested-loop",
  "unicorn/no-immediate-mutation",
  "unicorn/no-named-default",
  "unicorn/no-null",
  "unicorn/no-this-assignment",
  "unicorn/no-unnecessary-boolean-comparison",
  "unicorn/no-unreadable-new-expression",
  "unicorn/no-unsafe-dom-html",
  "unicorn/no-unused-properties",
  "unicorn/prefer-combined-guards",
  "unicorn/prefer-dispose",
  "unicorn/prefer-global-number-constants",
  "unicorn/prefer-import-meta-properties",
  "unicorn/prefer-minimal-ternary",
  "unicorn/prefer-number-properties",
  "unicorn/prefer-short-arrow-method",
  "unicorn/prefer-string-starts-ends-with",
  "unicorn/prefer-temporal",
  "unicorn/require-post-message-target-origin",
  "unicorn/try-complexity",
  "use-isnan",
  "valid-typeof",
  "yoda",
]
`;
